--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -79,6 +79,8 @@ illegal_char = Illegal character
 operator_not_recognized = Operator %s not recognized
 expected_instead = Expected %s instead of '%s'
 expected_goalrest = Expected 'is', '=' or arithmetic comparison, got '%s'
+expected_list = Expected a list, got %s
+expected_list_rest = Expected a list remainder, got %s
 goal_not_supported = Goal not supported
 term = a term
 functor = functor
