view: Unify LanguageKeys

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -13,27 +13,24 @@ menu_format = Format
 menu_export = Export
 menu_export_png = Export PNG
 menu_export_svg = Export SVG
-menu_export_tikz = Export TikZ
 
 menu_settings = Settings
 menu_stdlib = Enable standard library
 menu_language = Language
-menu_language_de = German
-menu_language_en = English
 
 tooltip_new = Create new file
 tooltip_open = Open file
 tooltip_save = Save file
 tooltip_parse = Parse program
 tooltip_format = Format program
-tooltip_stepback = Previous step
-tooltip_step = Next step
-tooltip_next = Next solution
+tooltip_previousstep = Previous step
+tooltip_nextstep = Next step
+tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
 
-yes = Yes
-no = No
-cancel = Cancel
+dialog_yes = Yes
+dialog_no = No
+dialog_cancel = Cancel
 
 confirm_new = Unsaved changes detected. Save changes?
 confirm_new_title = New
@@ -61,7 +58,7 @@ parser_query_error = Error parsing query
 
 visualisation_started = Visualisation started.
 viper_started = VIPER %s ready
-visualisation_cute_note = Backtracking to this subgoal<br />will make %s fail
+visualisation_cut_note = Backtracking to this subgoal<br />will make %s fail
 
 arithmetic_unset_variable = Unset variable: %s
 arithmetic_unsupported_term = Unsupported term: %s
@@ -80,8 +77,7 @@ operator_not_recognized = Operator %s not recognized
 expected_instead = Expected %s instead of '%s'
 expected_goalrest = Expected 'is', '=' or arithmetic comparison, got '%s'
 goal_not_supported = Goal not supported
+
 term = a term
 functor = functor
-unsupported_lists = Lists not supported
-
 unification = Unification
