view: Do not reset query field history on every parse

--- a/Documentation/Implementierungsbericht/bericht.tex
+++ b/Documentation/Implementierungsbericht/bericht.tex
@@ -107,7 +107,7 @@ Die Entwicklung von VIPER erfolgt in der Programmiersprache Java anhand des Mode
 		Beim Öffnen einer Datei wird der absolute Pfad der geöffneten Datei im Fenstertitel angezeigt.
 	
 	\subsubsection{History-Funktion des Eingabefelds}
-		Gestellte Abfragen im Eingabefeld werden bis zu einem erneuten Parsen gespeichert. Dies ermöglicht das \enquote{Scrollen} durch bisher gestellte Abfragen mittels der der Pfeiltasten.
+		Gestellte Abfragen im Eingabefeld werden bis zum Schließen des Programms gespeichert. Dies ermöglicht das \enquote{Scrollen} durch bisher gestellte Abfragen mittels der der Pfeiltasten.
 		
 	\subsubsection{Zoom-Funktion des Editors}
 		Die Textgröße im Editor-Fenster kann über das Bewegen des Mausrads bei gedrückter Steuerungs-Taste, oder durch Drücken der Plus und Minus Tasten in Kombination mit der Steuerungs-Taste angepasst werden.
